{
  "version": 4,
  "terraform_version": "0.13.7",
  "serial": 153,
  "lineage": "e53e24e2-3be9-044e-bd5a-1fce433f07b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "takehomel3l4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:006011941152:route-table/rtb-006123292132d8b02",
            "default_route_table_id": "rtb-006123292132d8b02",
            "id": "rtb-006123292132d8b02",
            "owner_id": "006011941152",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0daf3df4867134876",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Environment": "TakeHome L3/L4"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ec996f34016f704"
          },
          "dependencies": [
            "aws_internet_gateway.takehomel3l4",
            "aws_vpc.takehomel3l4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "takehomel3l4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08aca7d5089745fbb",
            "arn": "arn:aws:ec2:us-west-2:006011941152:instance/i-0ff81195d8410c1e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff81195d8410c1e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "takehomel3l4-Public-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01597d573440c8feb",
            "private_dns": "ip-10-100-0-118.us-west-2.compute.internal",
            "private_ip": "10.100.0.118",
            "public_ip": "18.237.45.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e87b5e5ecbadc67",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5cfcb12e09ba907",
            "tags_all": {
              "Environment": "TakeHome L3/L4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0db68b96427797f30"
            ]
          },
          "dependencies": [
            "aws_key_pair.takehomel3l4",
            "aws_security_group.takehomel3l4",
            "aws_subnet.takehomel3l4",
            "aws_vpc.takehomel3l4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "takehomel3l4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:006011941152:internet-gateway/igw-0daf3df4867134876",
            "id": "igw-0daf3df4867134876",
            "owner_id": "006011941152",
            "tags_all": {
              "Environment": "TakeHome L3/L4"
            },
            "vpc_id": "vpc-01ec996f34016f704"
          },
          "dependencies": [
            "aws_vpc.takehomel3l4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "takehomel3l4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:006011941152:security-group/sg-0db68b96427797f30",
            "description": "Application traffic in/out",
            "egress": [],
            "id": "sg-0db68b96427797f30",
            "ingress": [],
            "name": "APP_Access",
            "name_prefix": "",
            "owner_id": "006011941152",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "TakeHome L3/L4"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ec996f34016f704"
          },
          "dependencies": [
            "aws_vpc.takehomel3l4"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "takehomel3l4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Inbound APP",
            "from_port": 5000,
            "id": "sgrule-3810834302",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0db68b96427797f30",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.takehomel3l4",
            "aws_vpc.takehomel3l4"
          ]
        },
        {
          "index_key": "outall",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Outbound all",
            "from_port": 0,
            "id": "sgrule-1895769643",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0db68b96427797f30",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.takehomel3l4",
            "aws_vpc.takehomel3l4"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Inbound SSH",
            "from_port": 22,
            "id": "sgrule-1479417899",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0db68b96427797f30",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.takehomel3l4",
            "aws_vpc.takehomel3l4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "takehomel3l4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:006011941152:subnet/subnet-0c5cfcb12e09ba907",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.100.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5cfcb12e09ba907",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "006011941152",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "TakeHome L3/L4"
            },
            "vpc_id": "vpc-01ec996f34016f704"
          },
          "dependencies": [
            "aws_vpc.takehomel3l4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "takehomel3l4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:006011941152:vpc/vpc-01ec996f34016f704",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-064f6a1bf2a92e5c9",
            "default_route_table_id": "rtb-006123292132d8b02",
            "default_security_group_id": "sg-000e7667e8acb575d",
            "dhcp_options_id": "dopt-b821a1dd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01ec996f34016f704",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006123292132d8b02",
            "owner_id": "006011941152",
            "tags_all": {
              "Environment": "TakeHome L3/L4"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}